--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ repositories {
 }
 
 dependencies {
-
+    // DataFaker 
+    // https://www.datafaker.net/documentation/getting-started/
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
